--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rust-bert = { git = "https://github.com/guillaume-be/rust-bert" }
+rust-bert = "0.7.2"
 rand = "0.7.3"
 tch = "0.1.7"
